Added Missing translations For QuestionBoard Game

--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -38,6 +38,7 @@
   "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "अन्ना ने 12 पौधे खरीदे।\nउसकी बहन ने 7 पौधे खरीदे।\nअन्ना ने अपनी बहन से कितने अधिक पौधे खरीदे?",
   "App Language :": "ऐप भाषा :",
   "apples": "सेब",
+  "airplanes":"हवाई जहाज",
   "Please enter the details shared by your teacher below:": "कृपया नीचे अपने शिक्षक द्वारा दिए गए विवरण को दर्ज करें:",
   "Assignments": "कार्य",
   "Back": "वापस",
@@ -46,21 +47,35 @@
   "Background\nCollection": "पृष्ठभूमि संग्रह",
   "Badges Collection": "बैज संग्रह",
   "Badges\nCollection": "बैज संग्रह",
+  "bags":"थैलियों",
+  "balls":"गेंदों",
+  "balloons":"गुब्बारे",
+  "basketballs":"बास्केटबाल",
   "Begin Quiz": "प्रश्नोत्तरी शुरू करें",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?": "भीम के बगीचे में 13 फूल हैं।\nकीर्ति केबगीचे में 8 फूल हैं।\nकीर्ति की तुलना में भीम के पास और कितने ज्यादा फूल हैं?",
+  "beads":"मनका",
   "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?": "बाला के पास 2 मार्बल हैं।\nआर्यन के पास बाला से 3 अधिक मार्बल हैं।\nआर्यन के पास कितने मार्बल हैं?",
+  "birds":"पक्षियों",
   "Bob has 4 pencils and his sister has 8 more pencils than him. How many pencils does Bob's sister have?": "प्रथम के पास 4 पेंसिल हैं और उनकी बहन के पास उनसे 8 अधिक पेंसिल हैं।\nबॉब की बहन के पास कितनी पेंसिल हैं?",
   "Bobby bought 3 more books than Gabby. Gabby bought a book. How many books did Bobby buy?": "बाला ने गिरी से 3 किताबें अधिक खरीदीं।\nगिरी ने एक किताब खरीदी।\nबाला ने कितनी किताबें खरीदीं?",
   "books": "किताबें",
   "Boy": "लड़का",
+  "boys":"लड़के",
+  "bracelets":"कंगन",
   "Brad has 17 balloons. 8 balloons are red and the rest are green. How many balloons are green?": "नकुल के 17 गुब्बारे हैं।\n8 गुब्बारे लाल रंग के हैं और बाकी हरे हैं।\nकितने गुब्बारे हरे रंग के हैं?",
   "Brittany has 7 shirts in her closet.@3 of them are blue and the rest are green. How many green shirts does she have?": "सीता की अलमारी में 7 शर्ट हैं। उनमें से 3 नीले हैं और बाकी हरे हैं। उसके पास कितनी हरी शर्ट है?",
+  "butterflies":"तितलियों",
   "Cancel": "रद्द",
   "Cannot verify OTP": "OTP को सत्यापित नहीं किया जा सकता",
+  "cats":"बिल्ली की",
+  "cakes":"केक",
   "Challenge": "चुनौती",
+  "chairs":"कुर्सियां",
+  "children":"बच्चे",
   "Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?": "बच्चे अपनी कक्षा को सजाने के लिए चित्र बना रहे हैं।\nलड़को ने 11 चित्र बनाते हैं और लड़कियाँ 20 चित्र बनाती हैं।\nलड़कियाँ लड़कों की तुलना में कितनी अधिक चित्र बनती हैं?",
   "Choose your avatar": "अपना अवतार चुनें",
   "Choose Your Language": "अपना भाषा चुनें",
+  "chickens":"चिकन के",
   "circle": "वृत्त",
   "Class  :": "वर्ग  :",
   "Class code is invalid or expired": "कक्षा कोड अमान्य है या समाप्त हो गया है",
@@ -76,12 +91,15 @@
   "Continue": "जारी रखें",
   "Count and Match": "गिनती",
   "Count and Pair": "गणना",
+  "cookies":"कुकीज़",
   "cube": "घनक्षेत्र",
   "cylinder": "सिलेंडर",
   "Character Modification": "चरित्र संशोधन",
   "Character\nModification": "चरित्र संशोधन",
+  "crickets":"क्रिकेट",
   "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?": "ध्रुव और उसके दोस्त 9 पतंग उड़ाते हैं।\nकुछ पतंग एक पेड़ में फंस जाती हैं।\n6 पतंगें अभी भी उड़ रही हैं।\nपेड़ में कितनी पतंगें अटकी हैं?",
   "Dairy Rewards": "डेयरी पुरस्कार",
+  "days":"दिन",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "एक फुटबॉल टीम ने पहले हाफ में 3 गोल किए।\nफिर उन्होंने दूसरे हाफ में अधिक गोल किए।\nउन्होंने 5 गोल से गेम जीता! दूसरे हाफ में उन्होंने कितने गोल किए?",
   "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "धीर के पास एक टोकरी में 11 आम होते हैं।\nधीर अपनी बहन को 4 आम देता है।\nटोकरी में कितने आम बचे हैं?",
   "Division": "विभाजन",
@@ -89,6 +107,7 @@
   "Done": "हुआ",
   "Do you want to open now?": "क्या आप अभी खोलना चाहते हैं?",
   "Do you want to connect now?": "क्या आप अभी जुड़ना चाहते हैं?",
+  "ducks":"बतख",
   "eggs": "अंडे",
   "eight": "आठ",
   "Email :": "ईमेल :",
@@ -109,12 +128,16 @@
   "Fred is 12 years old. His brother Tom is 8 years old. How much younger is Tom than Fred?": "फैजल 12 साल का है।\nउसका भाई तुषार 8 साल का है।\nतुषार फैजल से कितना छोटा है?",
   "Friends": "पात्र",
   "Featured": "प्रदर्शित",
+  "flowers":"पुष्प",
   "Gabby worked 4 more hours than Ian. Ian worked 8 hours. How many hours did Gabby work?": "प्रथम के पास 4 पेंसिल हैं और उनकी बहन के पास उनसे 8 अधिक पेंसिल हैं।\nबॉब की बहन के पास कितनी पेंसिल हैं?",
   "Game Over": "खेल खत्म",
   "Gender  :": "लिंग :",
   "Gender": "लिंग",
   "George went to a store and bought some t-shirts. He went to another store and bought 2 more t-shirts. He bought a total of 7 t-shirts. How many t-shirts did he buy at the first store?": "गिरीश एक दुकान पर गया और कुछ टी-शर्ट खरीदी।\nवह दूसरे दुकान में गया और 2 और टी-शर्ट खरीदे।\nउसने कुल मिलाकर 7 टी-शर्ट खरीदीं।\nउसने पहली दुकान पर कितनी टी-शर्ट खरीदीं?",
   "Girl": "लड़की",
+  "gifts":"उपहार",
+  "green shirts":"हरी शर्ट",
+  "goals":"लक्ष्य",
   "Hannah makes 8 loaves of bread. She gives 3 loaves of bread to her cousin. How many loaves of bread does she have left?": "हिना 8 रोटियां बनाती हैं।\nवह अपने भाई को 3 रोटियाँ देती है।\nउसके पास कितनी रोटियाँ बची हैं?",
   "Harper and Raven drew 8 pictures together. Harper drew 3 pictures. How many pictures did Raven draw?": "एक पेड़ की शाखा पर 8 पक्षी बैठे हैं ।\nकुछ पक्षी उड़ गए।\nअब शाखा पर 3 पक्षी हैं।\nकितने पक्षी उड़ गए?",
   "Helen saw 12 birds in a tree and 7 birds in another tree. How many birds did she see altogether?": "हेमा ने एक पेड़ में 12 पक्षी और दूसरे पेड़ में 7 पक्षी देखे।\nउसने कुल मिलाकर कितने पक्षी देखे?",
@@ -123,10 +146,12 @@
   "Henry has 4 stamps. Eric has 5 more stamps than Henry. How many stamps does Eric have?": "हरि के पास 4 स्टांप हैं।\nइरा के पास हरि की तुलना में 5 अधिक स्टांप हैं।\nएरा के पास कितने स्टांप हैं?",
   "hexagon": "षट्भुज",
   "Home": "घर",
+  "hours":"घंटे",
   "How Many": "कितने हैं",
   "How Many??": "कितने??",
   "hundred": "सौ",
   "I have 10 apples. I eat some apples. I have 4 apples left. How many apples did I eat?": "मेरे पास 10 सेब हैं।\nमैं कुछ सेब खाता हूं।\nमेरे पास 4 सेब बचे हैं।\nमैंने कितने सेब खाए?",
+  "inches":"इंच",
   "Instagram": "इंस्टाग्राम",
   "Invalid Email Address": "अमान्य ईमेल पता",
   "Invalid Phone Number": "अमान्य फ़ोन नंबर",
@@ -150,9 +175,12 @@
   "Kelly saw 4 cats in front of her house. She went to sleep and when she woke up, there were 7 cats in front of her house. How many cats came to her house while she was sleeping?": "कोमल ने अपने घर के सामने 4 बिल्लियाँ देखीं।\nवह सोने चली गई और जब वह सोकर उठी तो उसके घर के सामने 7 बिल्लियाँ थीं।\nसोते समय उसके घर में कितनी बिल्लियाँ आईं?",
   "Kelly's chicken laid 6 eggs yesterday. Today, her chicken laid 5 more eggs than yesterday. How many eggs did her chicken lay today?": "जय के मुर्गी ने कल 6 अंडे दिए और आज 3 अंडे दिए।\nजय के मुर्गी ने कुल मिलाकर कितने अंडे दिए?",
   "Kit, Ruth, and Dean each ate 2 slices of pizza. How many slices of pizza did they eat in all?": "किरण,  राजीव और दिनेश प्रत्येक ने केक के 2 भाग खाए।\nकेक के कितने भाग उन सबने मिलकर खाए?",
+  "kites":"काइट्स",
   "Kyle got 3 new shirts on his birthday. He already had 5 shirts. How many shirts does he have now?": "अपने जन्मदिन पर सोम को 3 नई शर्ट मिलीं।\nउसके पास पहले से ही 5 शर्ट थे।\nअब उसके पास कितनी शर्ट हैं?",
   "Laci and Kendra caught 14 fireflies altogether. Laci caught 5 fireflies. How many fireflies did Kendra catch?": "बिंदू और शिल्पा ने कुल मिलाकर 14 जुगनुओं को पकड़ा ।\nबिंदू ने 5 जुगनुओं को पकड़ा।\nशिल्पा ने कितने जुगनु पकड़े?",
   "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?": "लीना के पास 12 किताबें हैं।\nवह अपनी कक्षा की लाइब्रेरी में  8 किताबें दान करती हैं।\nलीना के पास कितनी किताबें बाकि हैं?",
+  "lambs":"भेड़ के बच्चे",
+  "letters":"पत्र",
   "Library": "संग्रह",
   "Literacy": "हिन्दी",
   "Login": "लॉग इन करें",
@@ -164,6 +192,8 @@
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?": "लतिका 9 साल की है।\nउसकी बहन जूली  6 साल की है।\nलतिका अपनी बहन जूली से कितनी बड़ी है?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?": "मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
   "mangos": "आम",
+  "mangoes": "आम",
+  "mails":"मेल",
   "marbles": "मार्बल",
   "Marco bought 12 fish. He put an equal number of fish into 4 tanks. How many fish are in each tank?": "अमीर ने 12 मछलियाँ खरीदीं।\nउन्होंने 4 टैंकों में समान संख्या में मछलियां डालीं।\nप्रत्येक टैंक में कितनी मछलियाँ हैं?",
   "Maria read 3 books and Stacy read 5 books. How many more books did Stacy read than Maria?": "मीशा ने 3 किताबें पढ़ीं और सीमा ने 5 किताबें पढ़ीं।\nसीमा ने मीशा की तुलना में कितनी अधिक किताबें पढ़ीं?",
@@ -188,6 +218,7 @@
   "Ms. Dawson has 12 students in her class. Some students are absent and 7 students are present. How many students are absent?": "मिस धवन की कक्षा में 12 छात्र हैं।\nकुछ छात्र अनुपस्थित हैं और  7 छात्र उपस्थित हैं।\nकितने छात्र अनुपस्थित हैं?",
   "Ms. Hannah is playing a hide-and-seek game with her 11 students. She finds 3 students. How many students are still hiding?": "मिस हिना अपने 11 छात्रों के साथ लुका-छिपी का खेल खेल रही हैं।\nउहोने 3 छात्र को खोज दिया ।\nकितने छात्र अभी भी छिपे हुए हैं?",
   "Ms. Jones ordered 8 bags of sugar. 5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?": "मिस जया ने चीनी के 8 बैग का पहुंचाया गया था ।\n5 बैग आज पहुं गए हैं।\nबाकी बैग कल पहुंचा दिए जाएंगे।\nकल चीनी के कितने बैग पहुंचाए जाएंगे?",
+  "minutes":"मिनट",
   "Name   :": "नाम   :",
   "Name": "नाम :",
   "Nassir picks up a 17-page book. He reads 9 pages. How many pages does he have left to read?": "नासिर ने 17 पन्नों की एक किताब निकाली।\nवह 9 पेज पढ़ता है।\nउसके पास पढ़ने के लिए कितने पन्ने बाकी हैं ?",
@@ -199,19 +230,26 @@
   "Objects and shapes": "वस्तु आकार",
   "OK": "ठीक है",
   "one": "एक",
-  "oval": "oval",
+  "oval": "अंडाकार",
+  "oranges":"संतरे",
   "parallelogram": "समानांतर चतुर्भुज",
   "Parent": "माता-पिता",
   "Parts and whole 2": "पूरा और हिस्सा",
   "Parts and Whole": "हिस्सा और पूरा",
   "Platformer game": "प्लेटफ़ॉर्मर गेम",
   "Paul has 7 plums. Brian has 4 more plums than Paul. How many plums does Brian have?": "पंकज के पास 7 प्लम हैं। पंकज की तुलना में कपिल के पास 4 और प्लम हैं। कपिल के पास कितने प्लम हैं?",
+  "pages":"पृष्ठों",
   "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "प्रतीक के पास 4 मार्बल हैं।\nशमीन प्रतीक को कुछ मार्बल देता है और अब उसके पास 6 मार्बल बाकी हैं।\nशामीन ने प्रतीक को कितने मार्बल दिए थे?",
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "प्रतिक ने भोजन से पहले किताब के 6 पन्ने पढ़े।\nभोजन के बाद उन्होंने कुछ और पन्ने पढ़ा।\nअगर प्रतिक कुल मिलाकर 9 पन्ने पढ़ते हैं  तो भोजन के बाद उन्होंने कितने पन्ने पढ़े?",
+  "people":"लोग",
+  "pencil":"पेंसिल",
+  "pencils":"पेंसिल",
   "Phone number :": "फ़ोन नंबर :",
   "Phone number is already used": "फ़ोन नंबर का पहले ही उपयोग किया जा चुका है",
   "Profile": "प्रोफ़ाइल",
   "Puzzle": "क्रम में रखे",
+  "puzzles": "पहेलि",
+  "pictures":"चित्रों",
   "Rectangle": "आयत",
   "Remove Teacher?": "शिक्क को हटाओ?",
   "Remove User?": "उपयोगकर्ता निकालें?",
@@ -219,6 +257,7 @@
   "Resend OTP": "OTP को फिर से भेजें",
   "Rewards": "पुरस्कार",
   "rhombus": "विषमकोण",
+  "rows":"पंक्तियों",
   "Sam ate 7 cookies and Jane ate 2 cookies. How many fewer cookies did Jane eat than Sam?": "सुंदर ने 7 कुकीज और जय ने  2 कुकीज खाईं।\nसुंदर की तुलना में जय ने कितने कम कुकीज़ खाए?",
   "Sam has 12 math problems for homework. He answered 3 of them. How many more math problems does Sam have left to answer?": "सुंदर को घर का पाठ के लिए 12 प्रश्न की समस्याएं दिए हैं।\nउसने उनमें से 3 प्रश्न का जवाब दिया।\nसुंदर को और कितनी गणित की प्रश्न का जवाब देना बाकी है?",
   "Sandy is 5 years old. Mia is 7 years older than Sandy. How old is Mia?": "सैंडी की उम्र 5 साल है। मीरा सैंडी से 7 साल बड़ी हैं।\n मीरा की उम्र कितनी है?",
@@ -228,6 +267,7 @@
   "School": "पाठशाला",
   "Setting": "सेटिंग",
   "seven": "सात",
+  "seashells":"सीप",
   "Shante picked 6 mangos from a tree. He put an equal number of mangos into 3 boxes. How many mangos did he put in each box?": "सचिन ने एक पेड़ से 6 आम निकाले।\nउन्होंने आमों की एक समान संख्या को 3 बक्से में रखा।\nप्रत्येक बक्से में उसने कितने आम रखे थे?",
   "Shape Order": "अनुक्रमण",
   "Shape Pattern": "आकार श्रेणी",
@@ -235,9 +275,11 @@
   "Shape Series": "आकार श्रृंखला",
   "Shapes and Objects": "आकार और वस्तु",
   "Shapes": "आकार",
+  "sheep":"भेड़",
   "Shelby earns star stickers when she does math at school. Yesterday, Shelby earned 4 stars. Today, she earned 3 more. How many stars did Shelby earn in all?": "जब सारा स्कूल में गणित करती है तो वह स्टार स्टिकर कमाती है।\nकल सारा ने 4 स्टार कमाए।\nआज उसने 3 और स्टार कमाए।\nसारा ने कितने स्टार कमाए?",
   "Shelly bought 4 boxes of donuts. Each box contains 5 donuts. How many donuts did she buy altogether?": "शेल्ली ने बर्फी के 4 बक्से खरीदे।\nप्रत्येक बक्से में 5 बर्फी होते हैं।\nउसने कुल कितने बर्फी खरीदे?",
   "six": "छह",
+  "socks":"मोज़े",
   "Something Went Wrong, Please Try Again": "कुछ गलत हो गया, कृपया फिर से प्रयास करें",
   "Some mangos were in the basket. 4 mangos were taken from the basket. Now there are 6 mangos. How many mangos were in the basket before they were taken?": "कुछ आम टोकरी में थे।\nटोकरी से 4 आम निकाले गए थे।\nअब 6 आम बचे हैं।\nटोकरी में शुरूआत में कितने आम थे?",
   "Soumya's chicken laid 6 eggs yesterday. Today, her chicken laid 5 more eggs than yesterday. How many eggs did her chicken lay today?": "कोमल के मुर्गे ने कल 6 अंडे दिए थे।\nआज उसके मुर्गे ने कल की तुलना में 5 और अंडे दिए हैं।\nआज उसके अंडे कितने अंडे देने थे?",
@@ -246,11 +288,14 @@
   "square": "वर्ग",
   "Stacie caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Stacie catch in all?": "सीमा ने सुबह 5 मछलियाँ पकड़ीं।\nउसने दोपहर में 4 \nऔर मछलियाँ पकड़ीं।\nसीमा ने कुल मिलाकर कितनी मछलियाँ पकड़ीं?",
   "stars": "स्टार",
+  "stamps":"टिकटों",
   "Stringed objects": "आकार की माला",
   "Story\nReading": "कहानी पढ़ना",
   "Sticker Books": "स्टिकर पुस्तकें",
   "Sticker\nPainting": "स्टिकर पेंटिंग",
+  "students":"छात्र",
   "Student ID is already used": "छात्र आईडी का पहले ही उपयोग किया जा चुका है",
+  "storybooks":"कहानी की पुस्तकें",
   "Succession in Shapes": "आकार आयोजन",
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "सौम्या को समुद्र तट पर 20 केकड़े मिले।\nनादिर को 6 केकड़े मिले।\nसौम्या को नादिर की तुलना में कितने अधिक केकड़े मिले?",
   "tables": "टेबल",
@@ -297,6 +342,7 @@
   "triangle": "त्रिकोण",
   "Twitter": "ट्विटर",
   "two": "दो",
+  "t-shirts":"टी शर्ट",
   "User": "उपयोगकर्ता",
   "verified": "सत्यापित",
   "verify": "सत्यापित करें",
@@ -312,6 +358,7 @@
   "Which is the biggest?": "कौन सा सबसे बड़ा है?",
   "Which is bigger?": "कौन सा बड़ा है?",
   "Write here": "यहाँ लिखें",
+  "years old":"वर्षों पुराना",
   "Yesterday, the store had 7 bags of rice. Today, the store has 2 bags of rice. How many bags of rice did the store sell?": "कल  दुकान में चावल के 7 बैग थे।\nआज दुकान में चावल के 2 बैग हैं।\nदुकान ने कितने बैग चावल बेचे?",
   "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?": "आप और आपकी बहन समान रूप से चिप्स के 10 बैग बांटते हैं।\nचिप्स के कितने बैग प्रत्येक को मिलेंगे?",
   "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": "आपके पास 7 गुब्बारे हैं और आपके मित्र के पास 5 गुब्बारे हैं।\nआपके मित्र के तुलना में आपके पास और कितने गुब्बारे हैं?",
