--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -38,6 +38,7 @@
     "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "ಗೋಪಿ 12 ಸಸ್ಯಗಳನ್ನು ಖರೀದಿಸಿದನು .ಅವನ ಸಹೋದರಿ 7 ಸಸ್ಯಗಳನ್ನು ಖರೀದಿಸಿದಳು .ತನ್ನ ಸಹೋದರಿಗಿಂತ ಗೋಪಿಯ ಬಳಿ ಎಷ್ಟು ಸಸ್ಯಗಳು ಜಾಸ್ತಿ ಇದ್ದವು ?",
     "App Language :": "ಅಪ್ಲಿಕೇಶನ್ ಭಾಷೆ:",
     "apples": "ಸೇಬು",
+    "airplanes":"ವಿಮಾನಗಳು",
     "Please enter the details shared by your teacher below:": "ನಿಮ್ಮ ಶಿಕ್ಷಕರು ಹಂಚಿಕೊಂಡಿರುವ ವಿವರಗಳನ್ನು ಕೆಳಗೆ ನಮೂದಿಸಿ:",
     "Assignments": "ನಿಯೋಜನೆ",
     "Backgrounds": "ಹಿನ್ನೆಲೆಗಳು",
@@ -46,21 +47,35 @@
     "Back": "ಹಿಂದೆ",
     "Badges Collection": "ಬ್ಯಾಡ್ಜ್‌ಗಳ ಸಂಗ್ರಹ",
     "Badges\nCollection": "ಬ್ಯಾಡ್ಜ್‌ಗಳ\nಸಂಗ್ರಹ",
+    "bags":"ಚೀಲಗಳು",
+    "balls":"ಚೆಂಡುಗಳು",
+    "balloons":"ಆಕಾಶಬುಟ್ಟಿಗಳು",
+    "basketballs":"ಬ್ಯಾಸ್ಕೆಟ್ಬಾಲ್",
     "Begin Quiz": "ರಸಪ್ರಶ್ನೆ ಪ್ರಾರಂಭಿಸಿ",
     "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?": "ಬೆತ್ ಉದ್ಯಾನದಲ್ಲಿ 13 ಹೂವುಗಳು ಇದ್ದವು ಹಾಗು ಕೇಟ್ ನ ಉದ್ಯಾನದಲ್ಲಿ8  ಹೂವುಗಳು ಇದ್ದವು.ಬೆತ್ ಬಳಿ ಕೇಟ್ ಗಿಂತ ಎಷ್ಟು ಹೂವುಗಳು ಜಾಸ್ತಿ ಇದ್ದವು?",
+    "beads":"ಮಣಿಗಳು",
     "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?": "ಬಿಲ್ಲಿಯ ಬಳಿ 2 ಗೋಲಿಗಳು ಇವ. ಆಡ್ರೆಯ ಬಳಿ ಬಿಳ್ಳಿಗಿಂತ 3 ಹೆಚ್ಚು ಗೋಲಿಗಳಿವೆ. ಆಡ್ರೆಯ ಬಳಿ ಎಷ್ಟು ಗೋಲಿಗಳು ಇವೆ ",
+    "birds":"ಪಕ್ಷಿಗಳು",
     "Bob has 4 pencils and his sister has 8 more pencils than him. How many pencils does Bob's sister have?": "ಬಾಬ್ಗೆ 4 ಪೆನ್ಸಿಲ್ಗಳು ಮತ್ತು ಅವನ ಸಹೋದರಿ ಅವರಿಗಿಂತ 8 ಪೆನ್ಸಿಲ್ಗಳನ್ನು ಹೊಂದಿದ್ದಾನೆ.ಬಾಬ್ನ ಸಹೋದರಿ ಎಷ್ಟು ಪೆನ್ಸಿಲ್ಗಳು ಹೊಂದಿದ್ದಾರೆ?",
     "Bobby bought 3 more books than Gabby. Gabby bought a book. How many books did Bobby buy?": "ಬಾಬಿ ಗ್ಯಾಬಿಗಿಂತ 3 ಪುಸ್ತಕ ಜಾಸ್ತಿ ಖರೀದಿಸುತ್ತಾನೆ .ಗ್ಯಾಬಿ 1 ಪುಸ್ತಕವನ್ನು ಖರೀದಿಸಿದನು .ಬಾಬಿ ಎಷ್ಟು ಪುಸ್ತಕಗಳನ್ನು ಖರೀದಿಸಿದನು?",
     "books": "ಪುಸ್ತಕಗಳು",
     "Boy": "ಹುಡುಗ",
+    "boys":"ಹುಡುಗರು",
+    "bracelets":"ಕಡಗಗಳು",
     "Brad has 17 balloons. 8 balloons are red and the rest are green. How many balloons are green?": "ಬ್ರಾಡ್ ನ ಬಳಿ 17 ಬಲೂನುಗಳಿವೆ. ಅದರಲ್ಲಿ 8 ಬಲೂನುಗಳು ಕೆಂಪು ಮತ್ತು ಉಳಿದವು ಹಸಿರು.ಬ್ರಾಡ್ ನ ಬಳಿ ಎಷ್ಟು ಹಸಿರು ಬಲೂನುಗಳಿವೆ?",
     "Brittany has 7 shirts in her closet.3 of them are blue and the rest are green. How many green shirts does she have?": "ಸೀತಾಳ  ಕ್ಲೋಸೆಟ್ನಲ್ಲಿ 7 ಶಿರ್ಟ್ಗಳಿದ್ದವು , ಅವುಗಳಲ್ಲಿ 3 ನೀಲಿ ಮತ್ತು ಉಳಿದವು ಹಸಿರು ಬಣ್ಣದ್ದಾಗಿದ್ದವು.ಅವಳ ಬಳಿ ಎಷ್ಟು ಹಸಿರು ಶರ್ಟ್ಗಳು ಇದ್ದವು? ",
+    "butterflies":"ಚಿಟ್ಟೆಗಳು",
     "Cancel": "ರದ್ದುಮಾಡು",
     "Cannot verify OTP": "OTP ಅನ್ನು ಪರಿಶೀಲಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ",
+    "cats":"ಬೆಕ್ಕುಗಳು",
+    "cakes":"ಕೇಕ್ಗಳು",
     "Challenge": "ಸವಾಲು",
+    "chairs":"ಕುರ್ಚಿಗಳು",
+    "children":"ಮಕ್ಕಳು",
     "Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?": "ಮಕ್ಕಳು ತಮ್ಮ ತರಗತಿಯನ್ನು ಅಲಂಕರಿಸಲು ಚಿತ್ರಗಳನ್ನು ಚಿತ್ರಿಸುತ್ತಿದ್ದಾರೆ.ಹುಡುಗರು 11 ಚಿತ್ರಗಳನ್ನು ಚಿತ್ರಿಸುತ್ತಾರೆ ಮತ್ತು ಹುಡುಗಿಯರು 20 ಚಿತ್ರಗಳನ್ನು ಚಿತ್ರಿಸುತ್ತಾರೆ. ಹುಡುಗರಿಗಿಂತ ಹುಡುಗಿಯರು ಎಷ್ಟು ಚಿತ್ರ ಜಾಸ್ತಿ  ಚಿತ್ರಿಸುತ್ತಾರೆ?",
     "Choose your avatar": "ನಿಮ್ಮ ಅವತಾರವನ್ನು ಆರಿಸಿ",
     "Choose Your Language": "ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆರಿಸಿ",
+    "chickens":"ಕೋಳಿಗಳು",
     "Class  :": "ವರ್ಗ:",
     "Class code is invalid or expired": "ವರ್ಗ ಕೋಡ್ ಅಮಾನ್ಯವಾಗಿದೆ ಅಥವಾ ಅವಧಿ ಮೀರಿದೆ",
     "circle": "ವೃತ್ತ",
@@ -76,13 +91,16 @@
     "Continue": "ಮುಂದುವರಿಸು",
     "Count and Match": "ಎಣಿಕೆ ಮತ್ತು ಹೊಂದಾಣಿಕೆ",
     "Count and Pair": "ಎಣಿಕೆ ಮತ್ತು ಜೋಡಿ",
+    "cookies":"ಕುಕೀಸ್",
     "Create User": "ಬಳಕೆದಾರರನ್ನು ರಚಿಸಿ",
     "cube": "ಕ್ಯೂಬ್",
     "cylinder": "ಸಿಲಿಂಡರ್",
     "Character Modification": "ಅಕ್ಷರ ಮಾರ್ಪಾಡು",
     "Character\nModification": "ಅಕ್ಷರ ಮಾರ್ಪಾಡು",
+    "crickets":"ಕ್ರಿಕೆಟ್‌ಗಳು",
     "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?": "ಡೇವಿಡ್ ಮತ್ತು ಅವನ ಸ್ನೇಹಿತರು 9 ಗಾಳಿಪಟಗಳನ್ನು ಹಾರಿಸುತ್ತಾರೆ.ಕೆಲವು ಗಾಳಿಪಟಗಳು ಮರದೊಳಗೆ ಅಂಟಿಕೊಳ್ಳುತ್ತವೆ  ,6 ಗಾಳಿಪಟಗಳು ಇನ್ನೂ ಹಾರುತ್ತಿರುತ್ತವೆ ಹಾಗಾದರೆ ಎಷ್ಟು ಗಾಳಿಪಟಗಳು ಮರದಲ್ಲಿ ಸಿಲುಕಿಕೊಂಡಿವವೆ?",
     "Dairy Rewards": "ಡೈರಿ ಬಹುಮಾನಗಳು",
+    "days":"ದಿನಗಳು",
     "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "ಡೀಯಾನಾಗೆ ಸೀತಾಗಿಂತ 5 ಜಾಸ್ತಿ ಪಧಬಂಧಗಳಿವೆ .ಸೀತಾಗೆ 3 ಪದಬಂಧಗಲಿದ್ದರೆ  ಡೀಯಾನಾಗೆ ಎಷ್ಟು ಪಧಬಂಧಗಳಿವೆ?",
     "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ 11 ಮಾವಿನಹಣ್ಣುಗಳಿವೆ. ಡಿಯಾಗೋ ತನ್ನ ಸಹೋದರಿಗೆ 4 ಮಾವಿನಹಣ್ಣುಗಳನ್ನು ನೀಡುತ್ತಾಳೆ ಈಗ ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ ಎಷ್ಟು ಮಾವಿನಹಣ್ಣುಗಳಿವೆ ?",
     "Division": "ವಿಭಜನೆ",
@@ -90,6 +108,7 @@
     "Done": "ಮುಗಿದಿದೆ",
     "Do you want to open now?": "ನೀವು ಈಗ ತೆರೆಯಲು ಬಯಸುವಿರಾ?",
     "Do you want to connect now?": "ನೀವು ಈಗ ಸಂಪರ್ಕಿಸಲು ಬಯಸುವಿರಾ?",
+    "ducks":"ಬಾತುಕೋಳಿಗಳು",
     "eggs": "ಮೊಟ್ಟೆಗಳು",
     "eight": "ಎಂಟು",
     "Email :": "ಇಮೇಲ್:",
@@ -110,12 +129,16 @@
     "Fun Game\nActivity": "ಮೋಜಿನ ಆಟ\nಚಟುವಟಿಕೆ",
     "Fred is 12 years old. His brother Tom is 8 years old. How much younger is Tom than Fred?": "ರಾಮನ ವಯಸ್ಸು12 ವರ್ಷ ಮತ್ತು ಅವನ ಸಹೋದರ ಸೋಮನಿಗೆ 8 ವರ್ಷ. ರಾಮನಿಗಿಂತ ಸೋಮ ಎಷ್ಟು ವರ್ಷ ಚಿಕ್ಕವನು?",
     "Friends": "ಸ್ನೇಹಿತರು",
+    "flowers":"ಹೂವುಗಳು",
     "Gabby worked 4 more hours than Ian. Ian worked 8 hours. How many hours did Gabby work?": "ಗ್ಯಾಬಿ ಇಯಾನ್ಗಿಂತ 4 ಗಂಟೆ ಜಾಸ್ತಿ ಕೆಲಸ ಮಾಡುತ್ತಾನೆ, ಇಯಾನ್ 8 ಗಂಟೆ ಕೆಲಸ ಮಾಡಿದರೆ.ಗ್ಯಾಬಿ ಎಷ್ಟು ಗಂಟೆ ಕೆಲಸ ಮಾಡಿದನು?",
     "Game Over": "ಗೇಮ್ ಓವರ್",
     "Gender :": "ಲಿಂಗ:",
     "Gender": "ಲಿಂಗ",
     "George went to a store and bought some t-shirts. He went to another store and bought 2 more t-shirts. He bought a total of 7 t-shirts. How many t-shirts did he buy at the first store?": "ಜಾರ್ಜ್ ಒಂದು ಅಂಗಡಿಯಿಂದ ಕೆಲವು ಅಂಗಿಯನ್ನು ಖರೀದಿಸುತ್ತಾನೆ, ಅವನು ಇನ್ನೊಂದು ಅಂಗಡಿಯಿಂದ 2 ಅಂಗಿ ಖರೀದಿಸುತ್ತಾನೆ. ಅವನ ಬಳಿ ಈಗ 7 ಅಂಗಿಗಳಿವೆ. ಅವನು ಮೊದಲ ಅಂಗಡಿ ಇಂದ ಎಷ್ಟು ಅಂಗಿಯನ್ನು ಖರೀದಿಸಿದನು ?",
     "Girl": "ಹುಡುಗಿ",
+    "gifts":"ಉಡುಗೊರೆಗಳು",
+    "green shirts":"ಹಸಿರು ಶರ್ಟ್ಗಳು",
+    "goals":"ಗುರಿಗಳು",
     "Hannah makes 8 loaves of bread. She gives 3 loaves of bread to her cousin. How many loaves of bread does she have left?": "ಹೆನ್ನಾ 8 ರೊಟ್ಟಿ ಮಾಡುತ್ತಲೇ , ಅದರಲ್ಲಿ 3 ರೊಟ್ಟಿಯನ್ನು ಅವಳ ತಂಗಿಗೆ ಕೊಡುತ್ತಾಳೆ . ಈಗ ಹೆನ್ನಾ ಬಳಿ ಎಷ್ಟು ರೊಟ್ಟಿ ಉಳಿದಿವೆ ?",
     "Harper and Raven drew 8 pictures together. Harper drew 3 pictures. How many pictures did Raven draw?": "ಹಾರ್ಪರ್ ಮತ್ತು ರೇವನ್ ಒಟ್ಟಿಗೆ 8 ಚಿತ್ರಗಳನ್ನು ಬಿಡಿಸುತ್ತಾರೆ, ಅದರಲ್ಲಿ ಹಾರ್ಪರ್ 3 ಚಿತ್ರವನ್ನು ಬಿಡಿಸಿದರೆ ರೇವನ್ ಎಷ್ಟು ಚಿತ್ರವನ್ನು ಬಿಡಿಸಿದ್ದಾನೆ ?",
     "Helen saw 12 birds in a tree and 7 birds in another tree. How many birds did she see altogether?": "ಹೆಲೆನ್ ಒಂದು ಮರದಲ್ಲಿ 12 ಹಕ್ಕಿಯನ್ನು ನೋಡುತ್ತಾಳೆ ಮತ್ತು ಇನ್ನೊಂದು ಮರದಲ್ಲಿ 7 ಹಕ್ಕಿಯನ್ನು ನೋಡುತ್ತಾಳೆ. ಅವಳು ಒಟ್ಟು ಎಷ್ಟು ಹಕ್ಕಿಯನ್ನು ನೋಡಿದಳು ?",
@@ -125,10 +148,12 @@
     "hexagon": "ಷಟ್ಕೋನ",
     "Home": "ಮನೆ",
     "HomeWork": "ಹೋಮ್‌ವರ್ಕ್",
+    "hours":"ಗಂಟೆಗಳು",
     "How Many": "ಎಷ್ಟು",
     "How Many??": "ಎಷ್ಟು??",
     "hundred": "ನೂರು",
     "I have 10 apples. I eat some apples. I have 4 apples left. How many apples did I eat?": "ನನ್ನ ಬಳಿ 10 ಸೇಬುಗಳಿವೆ, ಅದರಲ್ಲಿ ನಾನು ಕೆಲವು ಸೇಬುಗಳನ್ನು ತಿನ್ನುತ್ತೇನೆ, ಈಗ ನನ್ನ ಬಳಿ 4 ಸೇಬುಗಳಿವೆ ಹಾಗಾದರೆ ನಾನು ಎಷ್ಟು ಸೇಬುಗಳನ್ನು ತಿಂದಿದ್ದೇನೆ ?",
+    "inches":"ಇಂಚುಗಳು",
     "Instagram": "ಇನ್ಸ್ಟಾಗ್ರ್ಯಾಮ್",
     "Invalid Email Address": "ಅಮಾನ್ಯವಾದ ಇಮೇಲ್ ವಿಳಾಸ",
     "Invalid Phone Number": "ಅಮಾನ್ಯ ಫೋನ್ ಸಂಖ್ಯೆ",
@@ -152,9 +177,12 @@
     "Kelly saw 4 cats in front of her house. She went to sleep and when she woke up, there were 7 cats in front of her house. How many cats came to her house while she was sleeping?": "ಅಲೆಕ್ಸ್ ಅವನ ಮನೆಯ ಮುಂದೆ 4 ಬೆಕ್ಕನ್ನು ನೋಡುತ್ತಾನೆ ನಂತರ ಅವನು ಮಲಗಿ ಎದ್ದಾಗ ಅವನ ಮನೆಯ ಮುಂದೆ 7 ಬೆಕ್ಕುಗಳಿದ್ದವು. ಅವನು ಮಲಗಿದ್ದಾಗ ಎಷ್ಟು ಬೆಕ್ಕುಗಳು ಅವನ ಮನೆಯ ಮುಂದೆ ಬಂದಿದ್ದವು ?",
     "Kelly's chicken laid 6 eggs yesterday. Today, her chicken laid 5 more eggs than yesterday. How many eggs did her chicken lay today?": "ಪೀಟರ್ ನ  ಕೋಳಿ ನಿನ್ನೆ 6 ಮೊಟ್ಟೆ ಇಟ್ಟಿತ್ತು , ಇವತ್ತು ಅವನ ಕೋಳಿ ನಿನ್ನೆಗಿಂತ 5 ಮೊಟ್ಟೆ ಜಾಸ್ತಿ ಇಟ್ಟಿತು. ಇವತ್ತು ಅವನ ಕೋಳಿ ಎಷ್ಟು ಮೊಟ್ಟೆ ಇಟ್ಟಿತು  ?",
     "Kit, Ruth, and Dean each ate 2 slices of pizza. How many slices of pizza did they eat in all?": "ರಾಮು , ಕುಸುಮ ಮತ್ತು ಗೀತಾ ಎಲ್ಲರೂ 2 ದೋಸೆ ತಿಂದರು. ಹಾಗಾದರೆ  ಎಲ್ಲಾರು ಒಟ್ಟಿಗೆ ಎಷ್ಟು ದೋಸೆ ತಿಂದರು ?",
+    "kites":"ಗಾಳಿಪಟಗಳು",
     "Kyle got 3 new shirts on his birthday. He already had 5 shirts. How many shirts does he have now?": "ಕೈಲ್ ಅವರ ಹುಟ್ಟುಹಬ್ಬದಂದು 3 ಹೊಸ ಶರ್ಟ್ಗಳನ್ನು ಪಡೆದರು.ಅವರು ಈಗಾಗಲೇ 5 ಶರ್ಟ್ಗಳನ್ನು ಹೊಂದಿದ್ದರು.ಅವರು ಈಗ ಎಷ್ಟು ಶರ್ಟ್ಗಳನ್ನು ಹೊಂದಿದ್ದಾರೆ?",
     "Laci and Kendra caught 14 fireflies altogether. Laci caught 5 fireflies. How many fireflies did Kendra catch?": "ರಮೇಶ್ ಮತ್ತು ಸುರೇಶ್ ಒಟ್ಟಾಗಿ 14 ಚಿಟ್ಟೆಯನ್ನು ಹಿಡಿದರು. ಅದರಲ್ಲಿ 5 ಚಿಟ್ಟೆಯನ್ನು ರಮೇಶ್ ಹಿಡಿದಿದ್ದಾನೆ ಹಾಗಾದರೆ  ಸುರೇಶ್ ಎಷ್ಟು ಚಿಟ್ಟೆ ಹಿಡಿದಿದ್ದಾನೆ ?",
     "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?": "ಲೆನಾ 12 ಪುಸ್ತಕಗಳನ್ನು ಹೊಂದಿದೆ.ಅವಳು 8 ಪುಸ್ತಕಗಳನ್ನು ತನ್ನ ವರ್ಗ ಗ್ರಂಥಾಲಯಕ್ಕೆ ದಾನ ಮಾಡುತ್ತಾಳೆ. ಲೆನಾ ಬಳಿ ಎಷ್ಟು ಪುಸ್ತಕಗಳು ಉಳಿದಿವೆ?",
+    "lambs":"ಕುರಿಮರಿಗಳು",
+    "letters":"ಅಕ್ಷರಗಳು",
     "Library": "ಗ್ರಂಥಾಲಯ",
     "Literacy": "ಸಾಕ್ಷರತೆ",
     "Logout": "ಲಾಗ್ ಔಟ್",
@@ -162,6 +190,8 @@
     "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?": "ಜೂಲಿಯ ವಯಸ್ಸು ಈಗ 9 ವರ್ಷ ಮತ್ತು ಅವಳ ತಂಗಿ ರೊಸಿಗೆ 6 ವರ್ಷ.ರೋಸಿಗಿಂತ ಜೂಲಿ ಎಷ್ಟು ವರ್ಷ ದೊಡ್ಡವಳು ?",
     "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?": "ಮ್ಯಾಗನ್ 8 ಮಿಠಾಯಿಗಳನ್ನು ಖರೀದಿಸಿದನು  ಮತ್ತು ಜೇನ್ 9 ಮಿಠಾಯಿಗಳನ್ನು ಖರೀದಿಸಿದನು . ಒಟ್ಟಾಗಿ ಅವರು ಎಷ್ಟು ಮಿಠಾಯಿಗಳನ್ನು ಖರೀದಿಸಿದರು?",
     "mangos": "ಮಾಂಗೋಸ್",
+    "mangoes": "ಮಾವಿನ ಹಣ್ಣುಗಳು",
+    "mails":"ಮೇಲ್",
     "marbles": "ಮಾರ್ಬಲ್ಸ್",
     "Marco bought 12 fish. He put an equal number of fish into 4 tanks. How many fish are in each tank?": "ಟಾಮ್ 12 ಮೀನುಗಳನ್ನು ಖರೀದಿಸುತ್ತಾನೆ. ಅವನು 4 ಟ್ಯಾಂಕ್ ಗಳಿಗೆ ಸಮವಾಗಿ ಮೀನನ್ನು ಹಾಕುತ್ತಾನೆ . 1 ಟ್ಯಾಂಕ್ನಲ್ಲಿ  ಎಷ್ಟು ಮೀನುಗಳಿವೆ ?",
     "Maria read 3 books and Stacy read 5 books. How many more books did Stacy read than Maria?": "ಗೋಪಿ 3 ಪುಸ್ತಕವನ್ನು ಊದುತ್ತಾನೆ  ಹಾಗು ಹೇಮಂತ್ 5  ಪುಸ್ತಕವನ್ನು ಊದುತ್ತಾನೆ. ಗೋಪಿಗಿಂತ  ಹೇಮಂತ್ ಎಷ್ಟು ಪುಸ್ತಕ ಜಾಸ್ತಿ ಓದುತ್ತಾನೆ ?",
@@ -187,6 +217,7 @@
     "Ms. Dawson has 12 students in her class. Some students are absent and 7 students are present. How many students are absent?": "ಶಿಕ್ಷಕಿ ರೇಖಾಳ ವರ್ಗದಲ್ಲಿ ಒಟ್ಟು  12 ಮಕ್ಕಳು ಇದ್ದಾರೆ. ಕೆಲವು  ಮಕ್ಕಳು ಶಾಲೆಗೆ ಬರದಿದ್ದರಿಂದ 7 ಮಕ್ಕಳು ಮಾತ್ರ ವರ್ಗದಲ್ಲಿ ಹಾಜರಾಗಿರುತ್ತಾರೆ .  ವರ್ಗಕ್ಕೆ ಬಾರದ ಮಕ್ಕಳ ಸಂಖ್ಯೆ ಎಷ್ಟು ?",
     "Ms. Hannah is playing a hide-and-seek game with her 11 students. She finds 3 students. How many students are still hiding?": "ದಿವ್ಯ ತನ್ನ 11 ಗೆಳತಿಯರೊಂದಿಗೆ ಕಣ್ಣ ಮುಚ್ಚೆ  ಆಟ ಆಡುತ್ತ ಇದ್ದಾಳೆ . ಅವಳು ತನ್ನ 3 ಗೆಳೆಯರನ್ನು ಹಿಡಿಯುತ್ತಾಳೆ . ಈಗ ಎಷ್ಟು ಗೆಳೆಯರು ಇನ್ನು ಅವಿತು ಕುಳಿತಿದ್ದಾರೆ ?",
     "Ms. Jones ordered 8 bags of sugar. 5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?": "ಗೀತಾಳ ಬಳಿ 8 ಚಾಕಲೇಟ್ ಇದೆ. ಅದರಲ್ಲಿ ಅವಳು 5 ಚಾಕಲೇಟ್ಅನ್ನು ತನ್ನ ಗೆಳೆಯರಿಗೆ  ಕೊಡುತ್ತಾಳೆ . ಈಗ ಅವಳ ಬಳಿ ಎಷ್ಟು ಚಾಕಲೇಟ್ ಇದೆ ?",
+    "minutes":"ನಿಮಿಷಗಳು",
     "Name   :": "ಹೆಸರು:",
     "Name": "ಹೆಸರು",
     "Nassir picks up a 17-page book. He reads 9 pages. How many pages does he have left to read?": "ನಸಿರ್ 17-ಪುಟ ಪುಸ್ತಕವನ್ನು ಎತ್ತಿಕೊಳ್ಳುತ್ತಾನೆ. ಅವನು 9 ಪುಟಗಳನ್ನು ಓದುತ್ತಾರೆ.ಓದಲು ಅವನು ಎಷ್ಟು ಪುಟಗಳನ್ನು ಬಿಟ್ಟು ಹೋಗುತ್ತಾನೆ?",
@@ -199,27 +230,35 @@
     "OK": "ಸರಿ",
     "one": "ಒಂದು",
     "oval": "ಅಂಡಾಕಾರದ",
+    "oranges":"ಕಿತ್ತಳೆಗಳು",
     "parallelogram": "ಸಮಾಂತರ ಚತುರ್ಭುಜ",
     "Parent": "ಪೋಷಕ",
     "Parts and whole 2": "ಭಾಗಗಳು ಮತ್ತು ಇಡೀ 2",
     "Parts and Whole": "ಭಾಗಗಳು ಮತ್ತು ಸಂಪೂರ್ಣ",
     "Platformer game": "ಪ್ಲಾಟ್‌ಫಾರ್ಮರ್ ಆಟ",
     "Paul has 7 plums. Brian has 4 more plums than Paul. How many plums does Brian have?": "ಪಾಲ್ಗೆ 7 ಪ್ಲಮ್ಗಳಿವೆ.ಬ್ರಿಯಾನ್ ಪಾಲ್ಗಿಂತ 4 ಹೆಚ್ಚು ಪ್ಲಮ್ಗಳನ್ನು ಹೊಂದಿದ್ದಾರೆ.ಬ್ರಿಯಾನ್ ಎಷ್ಟು ಪ್ಲಮ್ಗಳನ್ನು ಹೊಂದಿದ್ದಾನೆ ?",
+    "pages":"ಪುಟಗಳು",
     "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "ಪೀಟರ್ ಬಳಿ 4 ಪೆನ್ಸಿಲ್ ಇದೆ. ಥಾಮಸ್ ಅವನಿಗೆ ಕೆಲವು ಪೆನ್ಸಿಲ್ ಕೊಡುತ್ತಾನೆ . ಈಗ ಅವನ ಬಳಿ 6 ಪೆನ್ಸಿಲ್ ಇದೆ . ಥಾಮಸ್ ಪೀಟರ್ ಗೆ  ಎಷ್ಟು ಪೆನ್ಸಿಲ್ ಕೊಟ್ಟನು ?",
     "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "ಊಟಕ್ಕೆ ಮುಂಚೆ ಪೀಟರ್ ತನ್ನ ಪುಸ್ತಕದ 6 ಪುಟಗಳನ್ನು  ಓದುತ್ತಾನೆ .ಊಟದ ನಂತರ ಅವನು  ಸ್ವಲ್ಪ ಹೆಚ್ಚು ಓದುತ್ತಾನೆ .ಪೀಟರ್ ಎಲ್ಲಾ ಸೇರಿ 9 ಪುಟಗಳನ್ನು ಓದಿದಲ್ಲಿ, ಊಟದ ನಂತರ ಅವನು ಎಷ್ಟು ಪುಟಗಳನ್ನು ಓದಿದನು?",
+    "people":"ಜನರು",
+    "pencil":"ಪೆನ್ಸಿಲ್",
+    "pencils":"ಪೆನ್ಸಿಲ್ಗಳು",
     "Phone number :": "ದೂರವಾಣಿ ಸಂಖ್ಯೆ :",
     "Phone number is already used": "ಫೋನ್ ಸಂಖ್ಯೆಯನ್ನು ಈಗಾಗಲೇ ಬಳಸಲಾಗಿದೆ",
     "Profile": "ವಿವರ",
     "Puzzle": "ಪಜಲ್",
+    "puzzles": "ಒಗಟುಗಳು",
+    "pictures":"ಚಿತ್ರಗಳು",
     "Rectangle": "ಆಯಾತ",
     "Re-Connect to your class using Student ID": "ವಿದ್ಯಾರ್ಥಿ ID ಬಳಸಿಕೊಂಡು ನಿಮ್ಮ ತರಗತಿಗೆ ಮರುಸಂಪರ್ಕಿಸಿ",
     "Remove Teacher?": "ಶಿಕ್ಷಕನನ್ನು ತೆಗೆದುಹಾಕಿ?",
     "Remove User?": "ಬಳಕೆದಾರನನ್ನು ತೆಗೆದುಹಾಕಿ?",
     "Report": "ವರದಿ",
-    "Resend OTP": "Otp resend",
+    "Resend OTP": "Otp ಮರುಕಳುಹಿಸಿ",
     "Revision-1": "ಪರಿಷ್ಕರಣೆ -1",
     "Rewards": "ಪ್ರತಿಫಲಗಳು",
     "rhombus": "ರಾಂಬಸ್",
+    "rows":"ಸಾಲುಗಳು",
     "Sam ate 7 cookies and Jane ate 2 cookies. How many fewer cookies did Jane eat than Sam?": "ಸ್ಯಾಮ್ 7 ಚಾಕಲೇಟ್  ಹಾಗು ಜೇನ್ 2 ಚಾಕಲೇಟ್  ತಿನ್ನುತ್ತಾನೆ. ಜೇನ್  ಸ್ಯಾಮ್ಗಿಂತ  ಎಷ್ಟು ಚಾಕಲೇಟ್ ಕಡಿಮೆ ತಿಂದನು?",
     "Sam has 12 math problems for homework. He answered 3 of them. How many more math problems does Sam have left to answer?": "ಕೇಶವನಿಗೆ 12 ಗಣಿತ  ಪ್ರಶ್ನೆಗಳ  ಹೋಂವರ್ಕ್  ಇದೆ . ಅವನು ಅದರಲ್ಲಿ 3 ಪ್ರಶ್ನೆಗಳನ್ನು ಮುಗಿಸಿದ್ದಾನೆ . ಕೇಶವನಿಗೆ ಇನ್ನು ಎಷ್ಟು ಗಣಿತ ಪ್ರಶ್ನೆಗಳು ಬಾಕಿ ಇವೆ ?",
     "Sandy is 5 years old. Mia is 7 years older than Sandy. How old is Mia?": "ಸ್ಯಾಂಡಿಗೆ  5 ವರ್ಷ ವಯಸ್ಸಾಗಿದೆ. ರಾಜುಗೆ  ಸ್ಯಾಂಡಿಗಿಂತ 7 ವರ್ಷ ಜಾಸ್ತಿ ವಯಸ್ಸಾಗಿದೆ.ರಾಜುವಿನ ವಯಸ್ಸು  ಎಷ್ಟು?",
@@ -229,6 +268,7 @@
     "School": "ಶಾಲೆ",
     "Setting": "ಸೆಟ್ಟಿಂಗ್",
     "seven": "ಏಳು",
+    "seashells":"ಕಡಲ ಚಿಪ್ಪುಗಳು",
     "Shante picked 6 mangos from a tree. He put an equal number of mangos into 3 boxes. How many mangos did he put in each box?": "ಶಾಂಟೆ ಮರದಿಂದ 6 ಮಾವಿನಹಣ್ಣನ್ನು  ಆರಿಸಿಕೊಂಡರು.ಅವರು 3 ಪೆಟ್ಟಿಗೆಗಳಿಗೆ ಸಮಾನ ಸಂಖ್ಯೆಯ ಮಾವಿನಹಣ್ಣನ್ನು  ಹಾಕಿದರು.ಪ್ರತಿ ಪೆಟ್ಟಿಗೆಯಲ್ಲಿ ಅವರು ಎಷ್ಟು ಮಾವಿನಹಣ್ಣನ್ನು  ಹಾಕಿದರು?",
     "Shape Order": "ಆಕಾರ ಆದೇಶ",
     "Shape Pattern": "ಆಕಾರ ಮಾದರಿ",
@@ -236,9 +276,11 @@
     "Shape Series": "ಆಕಾರ ಸರಣಿ",
     "Shapes and Objects": "ಆಕಾರಗಳು ಮತ್ತು ವಸ್ತುಗಳು",
     "Shapes": "ಆಕಾರಗಳು",
+    "sheep":"ಕುರಿಗಳು",
     "Shelby earns star stickers when she does math at school. Yesterday, Shelby earned 4 stars. Today, she earned 3 more. How many stars did Shelby earn in all?": "ಶೆಲ್ಬಿ ಅವರು ಶಾಲೆಯಲ್ಲಿ ಗಣಿತ ಮಾಡಿದಾಗ ಸ್ಟಾರ್ ಸ್ಟಿಕ್ಕರ್ಗಳನ್ನು ಸಂಪಾದಿಸುತ್ತಾಳೆ .ನಿನ್ನೆ, ಶೆಲ್ಬಿ 4 ಸ್ಟಾರ್ಸ್ ಗಳಿಸಿದಳು .ಇಂದು ಅವಳು  3 ಗಳಿಸಿದರು.ಶೆಲ್ಬಿ ಒಟ್ಟಿಗೆ ಎಷ್ಟು ಸ್ಟಿಕ್ಕರ್ಗಳನ್ನುಗಳಿಸಿದಳು ?",
     "Shelly bought 4 boxes of donuts. Each box contains 5 donuts. How many donuts did she buy altogether?": "ಶೆಲ್ಲಿ 4  ಡೋನಟ್  ಪೆಟ್ಟಿಗೆಗಳನ್ನು ಖರೀದಿಸಿದಳು .ಪ್ರತಿ ಪೆಟ್ಟಿಗೆಯಲ್ಲಿ 5 ಡೋನಟ್  ಇದೆ.ಎಷ್ಟು  ಡೊನುಟ್ಸ್  ಅವರು ಒಟ್ಟಾರೆಯಾಗಿ ಖರೀದಿಸಿದಳು ?",
     "six": "ಆರು",
+    "socks":"ಸಾಕ್ಸ್",
     "Some mangos were in the basket. 4 mangos were taken from the basket. Now there are 6 mangos. How many mangos were in the basket before they were taken?": "ಕೆಲವು ಮಾವಿನಹಣ್ಣುಗಳು  ಬುಟ್ಟಿಯಲ್ಲಿದ್ದವು .4 ಮಾವಿನಹಣ್ಣುಗಳನ್ನು  ಬುಟ್ಟಿಯಿಂದ ತೆಗೆದುಕೊಳ್ಳಲಾಗಿದೆ.ಈಗ ಬುಟ್ಟಿಯಲ್ಲಿ  6  ಮಾವಿನಹಣ್ಣುಗಳಿವೆ .ಅವರು ತೆಗೆದುಕೊಳ್ಳುವ ಮೊದಲು ಎಷ್ಟು ಮಾವಿನಹಣ್ಣುಗಳು  ಬುಟ್ಟಿಯಲ್ಲಿದ್ದವು ?",
     "Something Went Wrong, Please Try Again": "ಏನೋ ತಪ್ಪಾಗಿದೆ, ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
     "Soumya's chicken laid 6 eggs yesterday. Today, her chicken laid 5 more eggs than yesterday. How many eggs did her chicken lay today?": "ಸೌಮ್ಯಳ ಕೋಳಿ  ನಿನ್ನೆ 6 ಮೊಟ್ಟೆಗಳು ಹಾಕಿತು.ಇಂದು, ಅವಳ ಕೋಳಿ   ನಿನ್ನೆಗಿಂತ 5 ಮೊಟ್ಟೆಗಳು  ಜಾಸ್ತಿ  ಹಾಕಿತು.ಅವಳ ಕೋಳಿ  ಇಂದು ಎಷ್ಟು ಮೊಟ್ಟೆಗಳು ಹಾಕಿತು?",
@@ -247,11 +289,14 @@
     "square": "ಚದರ",
     "Stacie caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Stacie catch in all?": "ರೊಸಿ ಬೆಳಿಗ್ಗೆ 5 ಮೀನುಗಳನ್ನು ಹಿಡಿದಳು .ಅವರು ಮಧ್ಯಾಹ್ನ 4 ಮೀನುಗಳನ್ನು ಹಿಡಿದಳು .ರೊಸಿ  ಒಟ್ಟಾಗಿ ಎಷ್ಟು ಮೀನುಗಳನ್ನು  ಹಿಡಿದಳು ?",
     "stars": "ನಕ್ಷತ್ರಗಳು",
+    "stamps":"ಅಂಚೆಚೀಟಿಗಳು",
     "Story\nReading": "ಕಥೆ ಓದುವಿಕೆ",
     "Sticker Books": "ಸ್ಟಿಕ್ಕರ್ ಪುಸ್ತಕಗಳು",
     "Sticker\nPainting": "ಸ್ಟಿಕ್ಕರ್ ಪೇಂಟಿಂಗ್",
     "Stringed objects": "ತಂತಿ ವಸ್ತುಗಳು",
+    "students":"ವಿದ್ಯಾರ್ಥಿಗಳು",
     "Student ID is already used": "ವಿದ್ಯಾರ್ಥಿ ID ಯನ್ನು ಈಗಾಗಲೇ ಬಳಸಲಾಗಿದೆ",
+    "storybooks":"ಕಥೆಪುಸ್ತಕಗಳು",
     "Succession in Shapes": "ಆಕಾರಗಳಲ್ಲಿ ಅನುಕ್ರಮ",
     "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "ಸಿಡ್ನಿಗೆ  ಸಮುದ್ರತೀರದಲ್ಲಿ 20 ಚಿಪ್ಪುಗಳು   ಸಿಗುತ್ತದೆ .ನೋವಾಗೆ  6 ಚಿಪ್ಪುಗಳು   ಸಿಗುತ್ತದೆ . ನೋವಾಗಿಂತ ಸಿಡ್ನಿಗೆ  ಎಷ್ಟು ಚಿಪ್ಪುಗಳು ಜಾಸ್ತಿ  ಸಿಕ್ಕಿದೆ ?",
     "tables": "ಕೋಷ್ಟಕಗಳು",
@@ -298,6 +343,7 @@
     "triangle": "ತ್ರಿಕೋನ",
     "Twitter": "ಟ್ವಿಟರ್",
     "two": "ಎರಡು",
+    "t-shirts":"ಟೀ ಶರ್ಟ್‌ಗಳು",
     "User": "ಬಳಕೆದಾರ",
     "verified": "ದೃಢೀಕರಿಸಲಾಗಿದೆ",
     "verify": "ಪರಿಶೀಲಿಸು",
@@ -312,6 +358,7 @@
     "Which is a circle?": "ಇದು ವೃತ್ತವಾಗಿದೆ?",
     "Which is the biggest?": "ಇವುಗಳಲ್ಲಿ ಯಾವುದು ದೊಡ್ಡದು ?",
     "Write here": "ಇಲ್ಲಿ ಬರೆಯಿರಿ",
+    "years old":"ವರ್ಷ ವಯಸ್ಸಿನವರು",
     "Yesterday, the store had 7 bags of rice. Today, the store has 2 bags of rice. How many bags of rice did the store sell?": "ನಿನ್ನೆ, ಅಂಗಡಿಯಲ್ಲಿ 7 ಚೀಲ ಅಕ್ಕಿಯನ್ನು ಮಾರಿದರು.ಇವತ್ತು  ಅಂಗಡಯಲ್ಲಿ  2 ಚೀಲ ಅಕ್ಕಿಯನ್ನು ಮಾರಿದರು .ಒಟ್ಟಾಗಿ ಅಂಗಡಿಯಲ್ಲಿ  ಎಷ್ಟು ಚೀಲ ಅಕ್ಕಿಯನ್ನು  ಮಾರಿದ್ದಾರೆ ?",
     "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?": "ನೀವು ಮತ್ತು ನಿಮ್ಮ ಸಹೋದರಿ 10  ಚಾಕಲೇಟ್ಅನ್ನು  ಸಮಾನವಾಗಿ ಹಂಚಿಕೊಳ್ಳುತ್ತೀರಿ. ನಿಮ್ಮ ಬಳಿ ಎಷ್ಟು ಈಗ ಎಷ್ಟು  ಚಾಕಲೇಟ್ ಇದೆ?",
     "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": "ನಿಮ್ಮ ಬಳಿ  7 ಬಲೂನ್ ಗಳಿವೆ ಹಾಗು ನಿಮ್ಮ ಗೆಳೆಯನ ಬಳಿ 5 ಬಲೂನ್ ಗಳಿವೆ. ನಿಮ್ಮ ಗೆಳೆಯನಿಗಿಂತ ನಿಮ್ಮ ಬಳಿ ಎಷ್ಟು ಬಲೂನ್ ಜಾಸ್ತಿ ಇದೆ?",
